syntax = "proto3";

package rating;
option go_package = "https://github.com/go-park-mail-ru/2024_2_kotyari/csat_service/grpc_gen";

message GetStatisticsRequest {
  string type = 1;
}

message GetStatisticsResponse {
  message StarVotes {
    uint32 star_number = 1;
    uint32 vote_count = 2;
  }
  repeated StarVotes stats = 1;
  uint32 total = 2;
  double average = 3;
}
